--- a/CHM9/sln+form/CHM9/CHM9.vcxproj.filters
+++ b/CHM9/sln+form/CHM9/CHM9.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="..\..\include\Computing.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="TableForm.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
