--- a/CHM9/sln+form/CHM9/CHM9.vcxproj.filters
+++ b/CHM9/sln+form/CHM9/CHM9.vcxproj.filters
@@ -23,10 +23,10 @@
     <ClInclude Include="MainForm.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Computing.h">
+    <ClInclude Include="TableForm.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="TableForm.h">
+    <ClInclude Include="RefForm.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
