--- a/CHM9/sln+form/CHM9/CHM9.vcxproj
+++ b/CHM9/sln+form/CHM9/CHM9.vcxproj
@@ -135,14 +135,13 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Messaging" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ErrorForm.cpp" />
     <ClCompile Include="MainForm.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\Table_for_drawing.h" />
     <ClInclude Include="ErrorForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
