--- a/CHM9/sln+form/CHM9/CHM9.vcxproj
+++ b/CHM9/sln+form/CHM9/CHM9.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="MainForm.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DivForm.h" />
     <ClInclude Include="ErrorForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
