--- a/CHM9/sln+form/Computing/Computing.vcxproj
+++ b/CHM9/sln+form/Computing/Computing.vcxproj
@@ -18,6 +18,12 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\include\Interpolation.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\scr\Interpolation.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{B41FB76B-3F43-485B-80D5-C283A8593D70}</ProjectGuid>
@@ -112,13 +118,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\include\Computing.h" />
-    <ClInclude Include="..\..\include\Table.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\scr\Computing.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
