--- a/CHM9/sln+form/Computing/Computing.vcxproj.filters
+++ b/CHM9/sln+form/Computing/Computing.vcxproj.filters
@@ -15,15 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\Computing.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\Table.h">
+    <ClInclude Include="..\..\include\Interpolation.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\scr\Computing.cpp">
+    <ClCompile Include="..\..\scr\Interpolation.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
